Update ChangeLog, fixed id in comics.json

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,2 +1,6 @@
 0.1 Initial Version
 - Caches GoComics
+
+0.2
+- Initial REST api created, exposing method /comics/v1/list
+- ComicCacher now maintains the file comics.json
